--- a/src/Makefile
+++ b/src/Makefile
@@ -2,9 +2,19 @@ CC_NATIVE = gcc
 CXX_NATIVE = g++
 LD_NATIVE = g++
 
-CFLAGS_NATIVE = -Wextra -Wall -Wno-unused-parameter -Wno-pragma-pack -O0 -g -fsanitize=address,undefined
-CXXFLAGS_NATIVE = $(CFLAGS_NATIVE)
+CC_EMCC = emcc
+CXX_EMCC  = emcc
+LD_EMCC = emcc
+
+CFLAGS_COMMON = -Werror -Wextra -Wall -Wno-unused-parameter -Wno-pragma-pack
+CXXFLAGS_COMMON = -std=c++11 -fno-exceptions
+
+CFLAGS_NATIVE =  $(CFLAGS_COMMON) -O0 -g -fsanitize=address,undefined
+CXXFLAGS_NATIVE = $(CFLAGS_NATIVE) $(CXXFLAGS_COMMON)
 LDFLAGS_NATIVE = -fsanitize=address,undefined
+
+CFLAGS_EMCC =  $(CFLAGS_COMMON) -O2
+CXXFLAGS_EMCC= $(CFLAGS_EMCC) $(CXXFLAGS_COMMON)
 
 INCLUDE = \
 	-I./hardware \
@@ -34,16 +44,22 @@ SOURCE_CPP = \
 	main.cpp
 
 BUILDDIR_NATIVE = .build
+BUILDDIR_EMCC = .build-emcc
 
 OBJECTS_NATIVE = $(SOURCE_C:%.c=$(BUILDDIR_NATIVE)/%.o) $(SOURCE_CPP:%.cpp=$(BUILDDIR_NATIVE)/%.o)
+OBJECTS_EMCC = $(SOURCE_C:%.c=$(BUILDDIR_EMCC)/%.o) $(SOURCE_CPP:%.cpp=$(BUILDDIR_EMCC)/%.o)
 
 BINARY_NATIVE = cloudpilot
+BINARY_EMCC = cloudpilot.js
+OTHER_EMCC = cloudpilot.wasm
 
 MKDIR = mkdir -p $(dir $@)
 
-all: bin
+all: bin emscripten
 
 bin: $(BINARY_NATIVE)
+
+emscripten: $(BINARY_EMCC)
 
 $(BINARY_NATIVE): $(OBJECTS_NATIVE)
 	$(LD_NATIVE) $(LDFLAGS_NATIVE) -o $@ $^
@@ -54,7 +70,17 @@ $(SOURCE_C:%.c=$(BUILDDIR_NATIVE)/%.o): $(BUILDDIR_NATIVE)/%.o : %.c
 $(SOURCE_CPP:%.cpp=$(BUILDDIR_NATIVE)/%.o): $(BUILDDIR_NATIVE)/%.o : %.cpp
 	$(MKDIR) && $(CXX_NATIVE) $(CXXFLAGS_NATIVE) $(INCLUDE) -c -o $@ $<
 
-clean:
-	-rm -fr $(BUILDDIR_NATIVE)
+$(BINARY_EMCC): $(OBJECTS_EMCC)
+	$(LD_EMCC) $(LDFLAGS_EMCC) -o $@ $^
 
-.PHONY: clean all bin
+$(SOURCE_C:%.c=$(BUILDDIR_EMCC)/%.o): $(BUILDDIR_EMCC)/%.o : %.c
+	$(MKDIR) && $(CC_EMCC) $(CFLAGS_EMCC) $(INCLUDE) -c -o $@ $<
+
+$(SOURCE_CPP:%.cpp=$(BUILDDIR_EMCC)/%.o): $(BUILDDIR_EMCC)/%.o : %.cpp
+	$(MKDIR) && $(CXX_EMCC) $(CXXFLAGS_EMCC) $(INCLUDE) -c -o $@ $<
+
+
+clean:
+	-rm -fr $(BUILDDIR_NATIVE) $(BUILDDIR_EMCC) $(BINARY_EMCC) $(BINARY_NATIVE) $(OTHER_EMCC)
+
+.PHONY: clean all bin emscripten
