Massage defines a bit more.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,9 @@
         "iterator": "cpp",
         "string": "cpp",
         "filesystem": "cpp",
-        "algorithm": "cpp"
+        "algorithm": "cpp",
+        "__locale": "cpp",
+        "functional": "cpp"
     },
     "[c]": {
         "editor.formatOnSave": true
