Consistently use new[] / delete[], remove stubs.

--- a/src/Makefile
+++ b/src/Makefile
@@ -69,6 +69,7 @@ SOURCE_CPP = \
 	hardware/EmSPISlaveADS784x.cpp \
 	hardware/EmRegsEZPalmV.cpp \
 	hardware/EmBankROM.cpp \
+	hardware/EmUAEGlue.cpp \
 	Miscellaneous.cpp \
 	Platform.cpp \
 	EmDevice.cpp \
