--- a/src/Makefile
+++ b/src/Makefile
@@ -10,13 +10,13 @@ CFLAGS_COMMON = -Werror -Wextra -Wall -Wno-unused-parameter -Wno-pragma-pack \
 	-DEMULATION_LEVEL=EMULATION_UNIX
 CXXFLAGS_COMMON = -std=c++14 -fno-exceptions
 
-CFLAGS_NATIVE =  $(CFLAGS_COMMON) -O0 -g -fsanitize=address,undefined
+CFLAGS_NATIVE = $(CFLAGS_COMMON) -O0 -g -fsanitize=address,undefined $(shell sdl2-config --cflags)
 CXXFLAGS_NATIVE = $(CFLAGS_NATIVE) $(CXXFLAGS_COMMON)
-LDFLAGS_NATIVE = -fsanitize=address,undefined
+LDFLAGS_NATIVE = -fsanitize=address,undefined $(shell sdl2-config --libs)
 
-CFLAGS_EMCC =  $(CFLAGS_COMMON) -O2
+CFLAGS_EMCC =  $(CFLAGS_COMMON) -O2 -s USE_SDL=2
 CXXFLAGS_EMCC= $(CFLAGS_EMCC) $(CXXFLAGS_COMMON)
-LDFLAGS_EMCC = -Wno-version-check -s EXIT_RUNTIME=1 -s NODERAWFS=1
+LDFLAGS_EMCC = -Wno-version-check -s EXIT_RUNTIME=1 -s NODERAWFS=1 -s USE_SDL=2
 
 BUILDDIR_NATIVE = .build
 DEPDIR_NATIVE = .deps
