--- a/src/Makefile
+++ b/src/Makefile
@@ -80,6 +80,7 @@ SOURCE_CPP = \
 	Platform.cpp \
 	EmDevice.cpp \
 	EmLowMem.cpp \
+	EmPalmOS.cpp \
 	Frame.cpp \
 	EmPoint.cpp \
 	EmThreadSafeQueue.cpp \
