Inject events -> interaction!

--- a/src/Makefile
+++ b/src/Makefile
@@ -82,6 +82,7 @@ SOURCE_CPP = \
 	patch/EmPatchMgr.cpp \
 	patch/EmPatchState.cpp \
 	Miscellaneous.cpp \
+	Marshall.cpp \
 	Platform.cpp \
 	EmDevice.cpp \
 	EmLowMem.cpp \
