--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     }
   },
   "devDependencies": {
+    "@rollup/plugin-alias": "^3.1.1",
     "@rollup/plugin-commonjs": "^13.0.0",
     "@rollup/plugin-html": "^0.2.0",
     "@rollup/plugin-node-resolve": "^8.1.0",
     "@rollup/plugin-typescript": "^5.0.0",
+    "@types/emscripten": "^1.39.4",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
     "eslint": "^7.3.1",
@@ -46,6 +48,7 @@
     "prettier": "^2.0.5",
     "prettier-plugin-import-sort": "^0.0.4",
     "rollup": "^2.18.0",
+    "rollup-plugin-copy": "^3.3.0",
     "rollup-plugin-eslint": "^7.0.0",
     "tslib": "^2.0.0",
     "typescript": "^3.9.5"
