--- a/src/Makefile
+++ b/src/Makefile
@@ -31,7 +31,8 @@ LDFLAGS_EMCC_WEB = -Wno-version-check \
 	-s EXIT_RUNTIME=1 \
 	-s MODULARIZE=1 \
 	-s EXPORT_NAME=createModule \
-	-s EXTRA_EXPORTED_RUNTIME_METHODS=["callMain","cwrap"]
+	-s EXPORT_ES6=1 \
+	-s EXTRA_EXPORTED_RUNTIME_METHODS=["ccall"]
 
 BUILDDIR_NATIVE = .build
 DEPDIR_NATIVE = .deps
@@ -128,7 +129,7 @@ OBJECTS_EMCC = $(SOURCE_C:%.c=$(BUILDDIR_EMCC)/%.o) $(SOURCE_CPP:%.cpp=$(BUILDDI
 OBJECTS_SDL_NATIVE = $(SOURCE_SDL:%.cpp=$(BUILDDIR_NATIVE)/%.o)
 OBJECTS_SDL_EMCC = $(SOURCE_SDL:%.cpp=$(BUILDDIR_EMCC)/%.o)
 
-OBJECTS_SDL_EMCC = $(SOURCE_WEB:%.cpp=$(BUILDDIR_EMCC)/%.o)
+OBJECTS_WEB_EMCC = $(SOURCE_WEB:%.cpp=$(BUILDDIR_EMCC)/%.o)
 
 BINARY_SDL_NATIVE = cloudpilot
 BINARY_SDL_EMCC = cloudpilot.js
