--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
     "target": "es2015",
-    "module": "es2015",
+    "module": "es6",
     "lib": ["DOM"],
     "jsx": "react",
-    "allowJs": true,
+    "allowJs": false,
     "sourceMap": true,
     "rootDir": "./",
     "importHelpers": true,
@@ -21,5 +21,7 @@
     "emitDecoratorMetadata": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
+    "baseUrl": ".",
+    "paths": {"native": ["./src"]}
   }
 }
