--- a/src/Makefile
+++ b/src/Makefile
@@ -156,7 +156,7 @@ GARBAGE = \
 	$(BINARY_SDL_EMCC) \
 	$(BINARY_SDL_NATIVE) \
 	$(BINARY_SDL_WASM) \
-	$(BINARY_WEB_NATIVE) \
+	$(BINARY_WEB_EMCC) \
 	$(BINARY_WEB_WASM) \
 	$(DEPDIR_NATIVE) \
 	$(DEPDIR_EMCC) \
