Bug fixes & restore RAM dump on launch.

--- a/src/Makefile
+++ b/src/Makefile
@@ -41,6 +41,7 @@ LDFLAGS_EMCC_SDL = -Wno-version-check \
 	-s USE_SDL_IMAGE=2 \
 	-s MODULARIZE=1 \
 	-s EXPORT_NAME=createModule \
+	-s ALLOW_MEMORY_GROWTH=1 \
 	-s EXPORTED_FUNCTIONS=["_malloc","_free","_main"] \
 	-s EXPORTED_RUNTIME_METHODS=["FS"] \
 	-s EXTRA_EXPORTED_RUNTIME_METHODS=["callMain","cwrap","ccall"]
@@ -51,6 +52,7 @@ LDFLAGS_EMCC_WEB = -Wno-version-check \
 	-s MODULARIZE=1 \
 	-s EXPORT_NAME=createModule \
 	-s EXPORT_ES6=1 \
+	-s ALLOW_MEMORY_GROWTH=1 \
 	-s EXTRA_EXPORTED_RUNTIME_METHODS=["ccall"]
 
 BUILDDIR_NATIVE = .build
