Don't persist RAM while device is still booting to avoid corruption.

--- a/src/Makefile
+++ b/src/Makefile
@@ -144,6 +144,7 @@ SOURCE_SDL = \
 	sdl/EventHandler.cpp
 
 SOURCE_SDL_NATIVE = $(SOURCE_SDL) sdl/Cli.cpp
+SOURCE_SDL_EMCC = $(SOURCE_SDL) sdl/EmscriptenApi.cpp
 
 SOURCE_WEB = \
 	web/main.cpp \
@@ -154,7 +155,7 @@ OBJECTS_NATIVE = $(SOURCE_C:%.c=$(BUILDDIR_NATIVE)/%.o) $(SOURCE_CPP:%.cpp=$(BUI
 OBJECTS_EMCC = $(SOURCE_C:%.c=$(BUILDDIR_EMCC)/%.o) $(SOURCE_CPP:%.cpp=$(BUILDDIR_EMCC)/%.o)
 
 OBJECTS_SDL_NATIVE = $(SOURCE_SDL_NATIVE:%.cpp=$(BUILDDIR_NATIVE)/%.o)
-OBJECTS_SDL_EMCC = $(SOURCE_SDL:%.cpp=$(BUILDDIR_EMCC)/%.o)
+OBJECTS_SDL_EMCC = $(SOURCE_SDL_EMCC:%.cpp=$(BUILDDIR_EMCC)/%.o)
 
 OBJECTS_WEB_EMCC = $(SOURCE_WEB:%.cpp=$(BUILDDIR_EMCC)/%.o)
 
@@ -214,7 +215,7 @@ $(SOURCE_CPP:%.cpp=$(BUILDDIR_NATIVE)/%.o) $(SOURCE_SDL_NATIVE:%.cpp=$(BUILDDIR_
 $(SOURCE_C:%.c=$(BUILDDIR_EMCC)/%.o): $(BUILDDIR_EMCC)/%.o : %.c
 	$(MKDIR_EMCC) && $(CC_EMCC) $(DEPFLAGS_EMCC) $(CFLAGS_COMMON) $(CFLAGS_EMCC) $(INCLUDE) -c -o $@ $<
 
-$(SOURCE_CPP:%.cpp=$(BUILDDIR_EMCC)/%.o) $(SOURCE_SDL:%.cpp=$(BUILDDIR_EMCC)/%.o) $(SOURCE_WEB:%.cpp=$(BUILDDIR_EMCC)/%.o): $(BUILDDIR_EMCC)/%.o : %.cpp
+$(SOURCE_CPP:%.cpp=$(BUILDDIR_EMCC)/%.o) $(SOURCE_SDL_EMCC:%.cpp=$(BUILDDIR_EMCC)/%.o) $(SOURCE_WEB:%.cpp=$(BUILDDIR_EMCC)/%.o): $(BUILDDIR_EMCC)/%.o : %.cpp
 	$(MKDIR_EMCC) && $(CXX_EMCC) $(DEPFLAGS_EMCC) $(CXXFLAGS_COMMON) $(CXXFLAGS_EMCC) $(INCLUDE) -c -o $@ $<
 
 $(BUILDDIR_EMCC)/$(WEBIDL_BINDING_CXX:%.cpp=%.o): $(WEBIDL_BINDING_JS)
