Avoid corruption if page is opened in different tabs simultaneously.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -82,7 +82,8 @@
         "stack": "cpp",
         "thread": "cpp",
         "cinttypes": "cpp",
-        "cstdbool": "cpp"
+        "cstdbool": "cpp",
+        "__split_buffer": "cpp"
     },
     "editor.formatOnSave": true
 }
