--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "extends": [
       "eslint:recommended",
       "plugin:@typescript-eslint/eslint-recommended",
-      "plugin:@typescript-eslint/recommended"
+      "plugin:@typescript-eslint/recommended",
+      "plugin:react/recommended"
     ],
     "rules": {
       "eqeqeq": "error"
@@ -34,30 +35,38 @@
   },
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.1",
-    "@rollup/plugin-commonjs": "^13.0.0",
+    "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-html": "^0.2.0",
-    "@rollup/plugin-node-resolve": "^8.1.0",
-    "@rollup/plugin-typescript": "^5.0.0",
+    "@rollup/plugin-node-resolve": "^8.4.0",
+    "@rollup/plugin-typescript": "^5.0.2",
     "@types/emscripten": "^1.39.4",
-    "@typescript-eslint/eslint-plugin": "^3.4.0",
-    "@typescript-eslint/parser": "^3.4.0",
-    "eslint": "^7.3.1",
+    "@types/react": "^16.9.43",
+    "@types/react-dom": "^16.9.8",
+    "@typescript-eslint/eslint-plugin": "^3.7.0",
+    "@typescript-eslint/parser": "^3.7.0",
+    "eslint": "^7.5.0",
+    "eslint-plugin-react": "^7.20.3",
+    "handlebars": "^4.7.6",
     "import-sort-style-eslint": "^6.0.0",
     "live-server": "^1.2.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
     "prettier-plugin-import-sort": "^0.0.4",
-    "rollup": "^2.18.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "rollup": "^2.23.0",
     "rollup-plugin-copy": "^3.3.0",
     "tslib": "^2.0.0",
-    "typescript": "^3.9.5",
-    "whatwg-fetch": "^3.0.0"
+    "typescript": "^3.9.7",
+    "whatwg-fetch": "^3.2.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@rollup/plugin-replace": "^2.3.3"
+  },
   "scripts": {
     "lint": "eslint web/src/**/*",
     "build": "eslint web/src/**/* && rollup -c",
-    "rollup-watch": "rollup -c -w",
+    "rollup-watch": "DEV=1 rollup -c -w",
     "launch-server": "live-server dist",
     "watch": "run-p launch-server rollup-watch"
   }
