--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     }
   },
   "devDependencies": {
+    "@emotion/core": "^10.0.28",
     "@rollup/plugin-alias": "^3.1.1",
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-html": "^0.2.0",
